arm_bootloader/stm32f3discovery_imu_driver/uf_subbus_protocol: put bootloader at start of ROM, no longer overwriting itself. changed how bootloader is built - each device's package does most of the work and includes some common code. use id bits in ROM to generate address. updated stm32f3discovery_imu_driver with these changes.

--- a/stm32f3discovery_imu_driver/firmware/Makefile
+++ b/stm32f3discovery_imu_driver/firmware/Makefile
@@ -38,6 +38,7 @@ CFLAGS		+= -Os -g -Wall -Wextra -I$(TOOLCHAIN_DIR)/include \
 		   -mfloat-abi=hard -mfpu=fpv4-sp-d16 -MD -DSTM32F3 \
 		   -Wsign-conversion -Wsign-compare \
 		   -I$(UF_SUBBUS_PROTOCOL_DIR)/include \
+		   -I$(ARM_BOOTLOADER_DIR)/include \
 		   -I../include
 CXXFLAGS	+= $(CFLAGS) -std=c++11
 LDSCRIPT	?= $(BINARY).ld
@@ -59,8 +60,6 @@ V=1
 ifneq ($(V),1)
 Q := @
 NULL := 2>/dev/null
-else
-LDFLAGS += -Wl,--print-gc-sections
 endif
 
 .SUFFIXES: .elf .bin .hex .srec .list .images
