catkinized with 65cecf44adb99106783d2206cbb745b40e0d258f

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,3 @@
 *~
-*pyc
-
-/*/build/
-
-/*/bin/
-/*/cfg/*cfgc
-/*/cfg/cpp/
-/*/docs/
-/*/lib/
-/*/msg/*Action.msg
-/*/msg/*Feedback.msg
-/*/msg/*Goal.msg
-/*/msg/*Result.msg
-/*/msg_gen/
-/*/src/*/cfg/
-/*/src/*/__init__.py
-/*/src/*/msg/
-/*/src/*/srv/
-/*/srv_gen/
+*.pyc
+*.backup
