--- a/stm32f3discovery_imu_driver/CMakeLists.txt
+++ b/stm32f3discovery_imu_driver/CMakeLists.txt
@@ -94,5 +94,5 @@ add_dependencies(stm32f3discovery_imu_driver ${catkin_EXPORTED_TARGETS})
 find_package(Boost REQUIRED COMPONENTS system)
 include_directories(${Boost_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
-set_target_properties(stm32f3discovery_imu_driver PROPERTIES COMPILE_FLAGS -std=c++11)
+set_target_properties(stm32f3discovery_imu_driver PROPERTIES COMPILE_FLAGS -std=c++0x)
 #target_link_libraries(example ${PROJECT_NAME})
