--- a/stm32f3discovery_imu_driver/package.xml
+++ b/stm32f3discovery_imu_driver/package.xml
@@ -19,12 +19,16 @@
   <build_depend>libopencm3</build_depend>
   <build_depend>arm_bootloader</build_depend>
   <build_depend>uf_subbus_protocol</build_depend>
+  <build_depend>kill_handling</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <!-- Dependencies needed after this package is compiled. -->
   <run_depend>sensor_msgs</run_depend>
   <run_depend>libopencm3</run_depend>
   <run_depend>arm_bootloader</run_depend>
   <run_depend>uf_subbus_protocol</run_depend>
+  <run_depend>kill_handling</run_depend>
+  <run_depend>message_runtime</run_depend>
 
   <!-- Dependencies needed only for running tests. -->
   <!-- <test_depend>sensor_msgs</test_depend> -->
